--- a/index.html
+++ b/index.html
@@ -446,11 +446,10 @@
                         <div class="project-box">
                             <img src="assets/image/hostal.jpg" alt="">
                             <div class="project-layer">
-                                <h4 style="color: purple; font-weight: bold;">Hostel Management</h4>
+                                <h4 style="color: #1B1464; font-weight: bold;">Hostel Management</h4>
                                 <p style="color: black; font-weight: bold;">Created simple hostel management system for the student of
-                                    university. And used to hibernate framework for implement the Project.<br>
-                                    And this Application developed for solving some problems of hostel students and
-                                    gives the best Efficient service for them</p>
+                                    university. And used to hibernate framework for implement the Project.
+                                    </p>
                                 </p>
                                 <a href="https://github.com/maheeshi-n-jayarathna/Hostel-Management-System"><i class='bx bx-link-external' ></i></a>
                             </div>
@@ -462,8 +461,10 @@
                         <div class="project-box">
                             <img src="assets/image/tsms.jpg" alt="">
                             <div class="project-layer">
-                                <h4 style="color: purple; font-weight: bold;">Tailor Shop Management System</h4>
-                                <p style="color: black; font-weight: bold;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                                <h4 style="color: #1B1464; font-weight: bold;">Tailor Shop Management System</h4>
+                                <p style="color: black; font-weight: bold;">Created simple tailor shop management system.
+                                    And used to Layered Architecture and Java
+                                    Database Connectivity for implement the Project. </p>
                                 <a href="https://github.com/maheeshi-n-jayarathna/tsms-layered-architecture"><i class='bx bx-link-external' ></i></a>
                             </div>
                         </div>
@@ -474,7 +475,7 @@
                         <div class="project-box">
                             <img src="assets/image/game.jpeg" alt="">
                             <div class="project-layer">
-                                <h4 style="color: purple; font-weight: bold;">Connect 4 Game</h4>
+                                <h4 style="color: #1B1464; font-weight: bold;">Connect 4 Game</h4>
                                 <p style="color: black; font-weight: bold;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
                                 <a href="#"><i style="color: black" class='bx bx-link-external' ></i></a>
                             </div>
@@ -486,11 +487,9 @@
                         <div class="project-box">
                             <img src="assets/image/chat.jpeg" alt="">
                             <div class="project-layer">
-                                <h4 style="color: purple; font-weight: bold;">Chat Application</h4>
+                                <h4 style="color: #1B1464; font-weight: bold;">Chat Application</h4>
                                 <p style="color: black; font-weight: bold;">I just got started with socket programming so in order to
-                                    improve my understandings of it I want to build a multi-client chat application.<br><br>
-                                    I just got started with socket programming so in order to improve my
-                                    understandings of it I want to build a multi-client chat application.
+                                    improve my understandings of it I want to build a multi-client chat application.
                                 </p>
                                 <a href="#"><i class='bx bx-link-external' ></i></a>
                             </div>
@@ -569,7 +568,7 @@
                     </section>
                 </div>
                 <div class="col-lg-7">
-                    <a href="assets/myPdf/CV.pdf" download><button class="btn" id="download-btn">Download CV</button></a>
+                    <a href="assets/myPdf/CV.pdf" download><button class="btn animate__animated animate__shakeX animate__infinite animate__slow" id="download-btn">Download CV</button></a>
                 </div>
             </div>
         </div>
@@ -653,7 +652,7 @@
                          </div>
 
                          <textarea name="" id="" cols="30" rows="10" placeholder="YOUR MESSAGE"></textarea>
-                         <input type="submit" value="SEND MESSAGE" class="btn1">
+                         <input type="submit" value="SEND MESSAGE" class="btn1 animate__animated animate__shakeX animate__infinite animate__slow">
                      </form>
              <!--   </div>
             </div>
